Ignoring submission files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@
 .Ruserdata
 House_Prices.Rproj
 prediction.R
+first_submission.csv
+second_submission.csv
+submission_V10.csv
+submission_V11.csv
+submission_V4.csv
+submission_V5.csv
+submission_V6.csv
+submission_V7.csv
+submission_V8.csv
+submission_V9.csv
+third_submission.csv
