--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,21 @@ submission_V7.csv
 submission_V8.csv
 submission_V9.csv
 third_submission.csv
+submission_V12.csv
+submission_V13.csv
+submission_V14.csv
+submission_V15.csv
+submission_V16.csv
+submission_V17.csv
+submission_V18.csv
+submission_V19.csv
+submission_V20.csv
+submission_V21.csv
+submission_V22.csv
+submission_V23.csv
+submission_V24.csv
+submission_V25.csv
+submission_V26.csv
+submission_V27.csv
+submission_V28.csv
+submission_V29.csv
