updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ submission_V26.csv
 submission_V27.csv
 submission_V28.csv
 submission_V29.csv
+lasso_model.R
+.DS_Store
+IG_submission.csv
+PCA_submission
+PCA_submission.csv
+kaggle_house_prices_andrea_tondella.html
